--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/sangmingming/KoaDemo#readme",
   "dependencies": {
     "koa": "^2.0.0",
+    "koa-router": "^7.0.1",
     "leanengine": "^1.2.2"
   },
-    "engines": {
-        "node":"4.x"
-    }
+  "engines": {
+    "node": "4.x"
+  }
 }
