--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "koa": "^2.0.0",
+    "koa-convert": "^1.2.0",
     "koa-router": "^7.0.1",
     "leanengine": "^1.2.2"
   },
